Update forge to 47.4.12